--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,30 @@
 
 /* Your CSS Code here. */
+.holder{
+	background-color: aqua;
+	width:100%;
+	height:400px;
+	display: flex;
+	justify-content:center;
+	align-items:center;
+	flex-wrap:wrap;
+}
+.item{
+	width:100px;
+	height:100px;
+	font-size:70px;
+}
+.red{
+	background-color: orangered;
+	order: 2;
+}
+
+.blue{
+	background-color: blue;
+	order: 3;
+	
+}
+
+.green{
+	background-color: green;
+}
